2014-01-15  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/pluginload.c (plugins_reload_from_dir): Improved code
	formatting.

2014-01-10  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/nasl_plugins.c, src/plugs_req.c, src/plugs_req.h, src/attack.c,
	src/save_kb.c, src/save_kb.h, src/pluginlaunch.c, src/pluginlaunch.h,
	src/pluginload.h: Use new typedef kb_t.

2014-01-10  Benoit Allard  <benoit.allard@greenbone.net>

	Post release version bump.

        * CMakeLists.txt: Set version to 4.0+beta5.

2014-01-10  Benoit Allard  <benoit.allard@greenbone.net>

	* CHANGES: Set release date for openvas-scanner-4.0+beta4 to 2014-01-10

2014-01-10  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/openvassd.c (restart_scanner): Ignore SIGHUP signals while
	reloading. Rename function to reload_scanner. Adjust log messages.
	(sighup): Move function definition up. Remove log writing call.
	(main_loop): Adjust scanner reloading title.

2014-01-10  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* tools/greenbone-nvt-sync: Renamed --synconly to sync-only to match
	OpenVAS style.

2014-01-09  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* tools/greenbone-nvt-sync: New option --synconly that will prevent
	updating of scanner and manager.
	(restart_openvassd): Renamed to update_openvassd and changed
	the restart directive of start-stop-daemon to the new SIGHUP mechanism.
	(update_openvasmd): Consistent wording with update_openvassd.
	(do_sync): Fix bug for refresh-only mode: Even the current-test should
	not be executed.

2014-01-09  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* CHANGES: Updated. But set no date yet.

2014-01-09  Matthew Mundell <matthew.mundell@greenbone.net>

	Remove --quiet option, making the NVT load messages depend on new option
	--progress instead.  Match the messages to the Manager style.

	* doc/openvassd.8.in: Replace --quiet with --progress.

	* src/openvassd.c (orig_argv): Remove.