@@ -1,5 +1,9 @@
 2014-01-15  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
+	* src/pluginlaunch.h: Removed unneeded proto for nasl_plugin_launch.
+
+2014-01-15  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
 	* src/pluginload.c (plugins_reload_from_dir): Improved code
 	formatting.
 
